# streamlit_frontend

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  linters.yml  tests.yml
.streamlit/: config.toml
src/: streamlit_frontend.py
src/frontend/: constants.py
tests/files/: constants.py
tests/src/: conftest.py
tests/src/test_main_page/: test_main_page.py
