[tool.black]
line-length = 120

[tool.poetry]
name = "URFU_2022_GROUP_20_PROJECT_FRONTEND"
version = "0.5.0"
description = "Streamlit based frontend for UrFU Master's machine learning program, first semester"
authors = ["Vladimir Katin <katin.v.v.@gmail.com>"]
license = "GPL v3"
readme = "README.md"
repository = "https://github.com/urfuMagDS2022SFgroup/streamlit_frontend"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.17.0"
requests = "2.28.2"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest-playwright = "0.3.0"
playwright = "1.29.1"
black = "22.12.0"
pre-commit = "2.21.0"
flake8 = "6.0.0"
isort = "5.11.4"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
